hero section in progress

--- a/#source/footer.html
+++ b/#source/footer.html
@@ -1,5 +1,9 @@
 <footer class="footer">
     <div class="footer__container">
-        here am i footer
+        <div class="footer__content">
+            <a href="https://notrealhumanbean.github.io/portfolio/" class="footer__link passing-underline">
+                more pages here
+            </a>
+        </div>
     </div>
 </footer>
