--- a/#source/header.html
+++ b/#source/header.html
@@ -1,5 +1,5 @@
 <header class="header">
     <div class="header__container">
-
+        <img src="/img/logo.svg" alt="Logo" class="header__logo">
     </div>
 </header>
