--- a/index.html
+++ b/index.html
@@ -6,23 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
-    <title>My title</title>
+    <title>Bakery</title>
 </head>
 
 <body>
     <div class="wrapper">
         <header class="header">
     <div class="header__container">
-
+        <img src="/img/logo.svg" alt="Logo" class="header__logo">
     </div>
 </header>
         <main class="page">
-
+            <section class="page__hero hero">
+                <div class="hero__container">
+                    <div class="hero__content">
+                        <h1 class="hero__main-title">Tasty pastries</h1>
+                        <p class="hero__text">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the</p>
+                        <a href="" class="hero__button reusable__button">see more</a>
+                    </div>
+                    <div class="hero__links-block links-block">
+                        <div class="links-block__social">
+                            <ul class="links-block__list">
+                                <li class="links-block__item">
+                                    <a href="" class="links-block__link">
+                                        <img src="/img/hero/01.svg" alt="icon" class="links-block__icon">
+                                    </a>
+                                </li>
+                                <li class="links-block__item">
+                                    <a href="" class="links-block__link">
+                                        <img src="/img/hero/02.svg" alt="icon" class="links-block__icon">
+                                    </a>
+                                </li>
+                                <li class="links-block__item">
+                                    <a href="" class="links-block__link">
+                                        <img src="/img/hero/03.svg" alt="icon" class="links-block__icon">
+                                    </a>
+                                </li>
+                                <li class="links-block__item">
+                                    <a href="" class="links-block__link">
+                                        <img src="/img/hero/04.svg" alt="icon" class="links-block__icon">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="links-block__phone">
+                            <a href="tel: +380555555555">Telephone: <span>+380 55 555 55 55</span></a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer class="footer">
     <div class="footer__container">
-        here am i footer
+        <div class="footer__content">
+            <a href="https://notrealhumanbean.github.io/portfolio/" class="footer__link passing-underline">
+                more pages here
+            </a>
+        </div>
     </div>
 </footer>
     </div>
