delete unnesessary files

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
                         </div>
                         <div class="work__gallery gallery">
                             <div class="gallery__card ibg">
-                                <img src="/img/work/01.jpeg" class="gallery__image" alt="Image">
+                                <img src="img/work/01.jpeg" class="gallery__image" alt="Image">
                             </div>
                             <div class="gallery__card ibg">
-                                <img src="/img/work/02.jpeg" class="gallery__image" alt="Image">
+                                <img src="img/work/02.jpeg" class="gallery__image" alt="Image">
                             </div>
                             <div class="gallery__card ibg">
-                                <img src="/img/work/03.jpeg" class="gallery__image" alt="Image">
+                                <img src="img/work/03.jpeg" class="gallery__image" alt="Image">
                             </div>
                             <div class="gallery__card ibg">
-                                <img src="/img/work/04.jpeg" class="gallery__image" alt="Image">
+                                <img src="img/work/04.jpeg" class="gallery__image" alt="Image">
                             </div>
                         </div>
                         <div class="work__button-holder">
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                         <div class="about__image image ibg">
-                            <img src="/img/about/01.jpeg" alt="Chef">
+                            <img src="img/about/01.jpeg" alt="Chef">
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         <div class="services__items">
                             <article class="services__item item-services">
                                 <div class="item-services__image ibg">
-                                    <img src="/img/services/01.jpeg" alt="Services image">
+                                    <img src="img/services/01.jpeg" alt="Services image">
                                 </div>
                                 <div class="item-services__content">
                                     <h3 class="item-services__title article-title">
@@ -141,7 +141,7 @@
                             </article>
                             <article class="services__item item-services">
                                 <div class="item-services__image ibg">
-                                    <img src="/img/services/02.jpeg" alt="Services image">
+                                    <img src="img/services/02.jpeg" alt="Services image">
                                 </div>
                                 <div class="item-services__content">
                                     <h3 class="item-services__title article-title">
@@ -156,7 +156,7 @@
                             </article>
                             <article class="services__item item-services span-3">
                                 <div class="item-services__image ibg">
-                                    <img src="/img/services/03.jpeg" alt="Services image">
+                                    <img src="img/services/03.jpeg" alt="Services image">
                                 </div>
                                 <div class="item-services__content">
                                     <h3 class="item-services__title article-title">
