--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="header__container">
-                <img src="/img/logo.svg" alt="Logo" class="header__logo">
+                <img src="img/logo.svg" alt="Logo" class="header__logo">
             </div>
         </header>
         <main class="page">
